# QUEST

./: .gitignore  .gitmodules  README.md  index.html  styles.css  styles.v2.css
evaluation/: README.md
evaluation/Mind2Web2_origion/: CLAUDE.md  batch_answer_cache.py  pyproject.toml
evaluation/Mind2Web2_origion/cache_manager_web/: CLAUDE.md  run.py
evaluation/Mind2Web2_origion/eval_scripts/: README.md
evaluation/Mind2Web2_origion/eval_scripts/dev_set/: buy_monitor.py  lol_sylas.py
evaluation/Mind2Web2_origion/mind2web2/llm_client/: azure_openai_client.py  openai_client.py
evaluation/Mind2Web2_origion/mind2web2/utils/: page_info_retrieval.py  path_config.py
evaluation/Mind2Web2_with_local_model/: run.sh  run_eval.py
evaluation/browsecomp/: browsecomp.jsonl  eval.py  run_judge.sh
evaluation/browsecomp_plus/: README.md  browsecomp_plus_quest_130.jsonl  run_eval_quest.sh  run_eval_quest_qwen3embed_mem80k.sh
evaluation/drbench/: deepresearch_bench_questions.jsonl
evaluation/gaia/: gaia-text-only-103.jsonl  judge.py  run_judge.sh
evaluation/hle/: evaluate_hle.py  hle_text_only_130.jsonl  judge.py  run_evaluate_hle.sh  run_judge.sh
evaluation/liveresearchbench/: README.md  prepare_lrb_full_questions.py  prepare_lrb_questions.py
evaluation/widesearch/: README.md  (+4 more)
inference/: README.md  api_config.yaml  prompt.py  react_agent.py  requirements.txt  run_multi_react.py  run_react_infer_bc.sh  run_react_infer_bc_staggered.sh  run_react_infer_drb.sh  run_react_infer_gaia.sh  run_react_infer_hle.sh  run_react_infer_hle_staggered.sh  run_react_infer_m2w2.sh  search_faiss_bridge.py  server_endpoints.conf  tool_memory.py  tool_python.py  tool_scholar.py  tool_search.py  tool_visit.py
(+3590 files in other folders)
